tests/errors/codec_omitnull_on_non_null.dang
# omitNull is meaningless on a non-null field, which can never be null.

type OmitNullNonNull {
  field: String! @JSON.field(omitNull: true)
}

print("Should not reach here!")
